fixed title spacing on smaller screens

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -118,7 +118,7 @@
 @media screen and ( max-width: 600px ){
   .top span:first-child{
       top: 180px;
-      font-size: 30px;
+      font-size: 26px;
       font-weight: 450;
   }
   .top-nav{
